# memoria-model

./: .env.example  .gitignore  BUILD_PLAN.md  Cargo.toml  README.md  REFERENCES.md  TODO.md  TRAINING_LOG.md  architecture.md  improvement-log.md  pyproject.toml  understanding.md
docs/: DATASET_CURATION.md  api_spec.md  architecture.md  plan-closing-the-gaps.md  plan-lfm2-integration.md  research-replacing-loopy-bp.md
memoria/: __init__.py  __main__.py
memoria/agency/: __init__.py  action_selection.py  curiosity.py  daemon.py  persistence.py  skills.py
memoria/cognition/: adaptive_depth.py  autoresearch.py  belief_update.py  cascade_revision.py  causal.py  cognitive_controller.py  consolidation.py  edge_proposal.py  hebbian.py  interleaved_replay.py  learned_update.py  meta_learning.py  pass2.py  planning.py  precision_recalibration.py  provisional.py  safety_gate.py  self_verification.py  sleep.py  srwm.py  strategy_bank.py  structural_plasticity.py  surprise.py  telos.py  telos_module.py  two_factor_sleep.py
memoria/core/: free_energy.py  kernel_rules.py  losses.py  message_passing.py  meta_params.py  polar.py  quantize.py  running_stats.py  state.py  ttt.py
memoria/data/: __init__.py  curated.py  formatters.py  interleave.py  streaming.py  synthetic.py  teacher.py  tokenizer.py
memoria/eval/: belief_tracking.py  causal.py  crossover.py  hallucination.py  improvement.py  perplexity.py  telos_demo.py
memoria/interface/: layer.py  read_path.py  write_path.py
memoria/model/: blt.py  config.py  ddtree.py  deltaproduct_layers.py  dflash_head.py  fenwick_state.py  kv_cache.py  memoria_model.py  pretrained_model.py  transformer.py
memoria/training/: cognitive_seed.py  credit_diagnostics.py  distributed.py  nan_debug.py  optimizer.py  schedule.py  train.py
paper/: memoria-technical-paper.md
scripts/: eval_all.sh  train.sh  train_overnight.sh  train_small.sh  warmup_cache.py
src/: config.rs  error.rs  lib.rs  runtime.rs
src/aif/: belief_update.rs  free_energy.rs  health.rs  hierarchical.rs  messages.rs  mod.rs  model_state.rs  propagation.rs
src/api/: agent.rs  ask.rs  context.rs  mod.rs  predict.rs  query_planner.rs  scope.rs  scratch.rs  tell.rs  telos.rs  telos_decompose.rs  telos_detect.rs  telos_multi.rs  telos_progress.rs
src/cache/: hot.rs  mod.rs
src/causal/: attribution.rs  bayes_ball.rs  d_separation.rs  do_operator.rs  graph.rs  mod.rs  notears.rs  sequence_mining.rs
src/dynamics/: compression.rs  confidence.rs  deadline.rs  graph_metrics.rs  intrinsic.rs  meta_learning.rs  mod.rs  ppm.rs  prediction.rs  projection.rs  reconsolidation.rs  reflection.rs  surprise.rs  trust.rs
src/pipeline/: chunker.rs  chunker_hierarchical.rs  hebbian.rs  mod.rs  pes.rs  scoring.rs  verifier.rs
src/queue/: mod.rs  task_queue.rs  worker.rs
src/rules/: compiler.rs  enforcer.rs  mod.rs  types.rs
src/services/: api_embedder.rs  api_reranker.rs  fallback.rs  gliner.rs  local_reranker.rs  mock.rs  mod.rs  traits.rs
src/skills/: lifecycle.rs  lineage.rs  mod.rs  niche.rs  selection.rs  storage.rs
src/store/: cozo.rs  mod.rs  schema.rs
src/types/: agent.rs  audit.rs  entity.rs  episode.rs  event.rs  fact.rs  kernel.rs  memory.rs  mod.rs  query.rs  scope.rs  scratch.rs  telos.rs
tests/: aif_integration.rs  integration_real.rs  test_a1_provisional.py  test_a2_mesu.py  test_a3_cascade.py  test_a4_safety_gate.py  test_a4b_safety_gated_modifications.py  test_aif_feedback.rs  test_autoresearch.py  test_c1_srwm.py  test_c2_learned_update.py  test_c3_structural_plasticity.py  test_c4_adaptive_depth.py  test_causal_graph.rs  test_cognitive_controller.py  test_compression.rs  test_credit_diagnostics.py  test_d1_daemon.py  test_d2_action_selection.py  test_d2b_action_consequence.py  test_d3_curiosity.py  test_d4_skills.py  test_deltaproduct.py  test_dsa.py  test_e1_two_factor_sleep.py  test_e2_self_verification.py  test_e3_precision_recalibration.py  test_e4_interleaved_replay.py  test_free_energy.py  test_full_lifecycle.rs  test_graph_metrics.rs  test_hebbian.rs  test_interface.py  test_meta_learning.rs  test_meta_learning_benchmark.rs  test_model.py  test_pass2.py  test_persistence.py  test_planning.py  test_polar.py  (+8 more)
tests/common/: mod.rs
tests/fixtures/: contradictions.json  longmemeval_single.json  squad_paragraphs.json  task_patterns.json
