[project]
name = "memoria"
version = "0.1.0"
description = "A self-evolving neural architecture with persistent cognitive state"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "datasets>=3.0",
    "tokenizers>=0.20",
    "transformers>=4.51",
    "huggingface-hub[hf_xet]>=0.25",
    "torch-geometric>=2.6",
    "accelerate>=1.0",
    "wandb",
    "numpy",
    "pyyaml",
    "pytest",
    "python-dotenv",
    "torchopt>=0.7",
    "nevergrad>=1.0",
    "entmax>=1.3",
    "expectation @ git+https://github.com/jakorostami/expectation.git",
    "mcts>=1.0",
]

[project.optional-dependencies]
bp = ["torch-bp @ git+https://github.com/janapavlasek/torch-bp.git"]
mamba = ["mamba-ssm>=2.0", "causal-conv1d>=1.4"]
fla = ["flash-linear-attention>=0.4"]
hattention = ["hattention @ git+https://github.com/HanGuo97/log-linear-attention.git"]
deq = ["torchdeq>=0.1"]
full = ["flash-linear-attention>=0.4", "hattention @ git+https://github.com/HanGuo97/log-linear-attention.git", "torchdeq>=0.1"]
scale = ["faiss-cpu>=1.9"]
rotorquant = ["turboquant @ git+https://github.com/scrya-com/rotorquant.git"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memoria*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:torch_geometric",
    "ignore::DeprecationWarning:torch.jit",
]
